fixed issue with the alignment

--- a/style.css
+++ b/style.css
@@ -56,12 +56,14 @@ p{
     display: flex;
     justify-content: space-between;
     margin-left: 150px;
+    
 }
 .container-primary{
     max-width: 1207px;
     display: flex;
     margin-left: 150px;
     margin-bottom: 150px;
+    
 }
 .navbar{
     margin-top: 45px;
@@ -134,14 +136,15 @@ p{
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    padding: 90px 37px 90px 17px;
+    padding: 37px;
+    margin-bottom: 95px;
     border-radius: 10px;
     box-shadow: 0px 23px 15px 0px rgba(0,0,0,0.06);
 }
 .image{
     background-color: var(--secondaryIcons);
-    padding: 22px;
-    border-radius: 70px;
+    padding: 25px;
+    border-radius: 50%;
 }
 .item{
     display: flex;
@@ -164,7 +167,7 @@ p{
 }
 
 .flex{
-    align-items: flex-start;
+    align-items: center;
     display: flex;
 }
 .pros{
